src/compiler/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    FOR

Grammar

Rule 0     S' -> program
Rule 1     program -> external_declaration_list
Rule 2     external_declaration_list -> external_declaration_list external_declaration
Rule 3     external_declaration_list -> external_declaration
Rule 4     external_declaration -> declaration
Rule 5     external_declaration -> function_definition
Rule 6     declaration -> type_specifier init_declarator_list SEMICOLON
Rule 7     init_declarator_list -> init_declarator_list COMMA init_declarator
Rule 8     init_declarator_list -> init_declarator
Rule 9     init_declarator -> ID ASSIGN expression
Rule 10    init_declarator -> ID
Rule 11    type_specifier -> INT
Rule 12    type_specifier -> FLOAT
Rule 13    type_specifier -> STRING_TYPE
Rule 14    type_specifier -> VOID
Rule 15    function_definition -> type_specifier ID LPAREN parameter_list RPAREN compound_statement
Rule 16    function_definition -> type_specifier ID LPAREN RPAREN compound_statement
Rule 17    parameter_list -> parameter_list COMMA parameter_declaration
Rule 18    parameter_list -> parameter_declaration
Rule 19    parameter_declaration -> type_specifier ID
Rule 20    statement -> compound_statement
Rule 21    statement -> expression_statement
Rule 22    statement -> selection_statement
Rule 23    statement -> iteration_statement
Rule 24    statement -> jump_statement
Rule 25    statement -> print_statement
Rule 26    statement -> local_declaration
Rule 27    local_declaration -> type_specifier init_declarator_list SEMICOLON
Rule 28    compound_statement -> LBRACE statement_list RBRACE
Rule 29    compound_statement -> LBRACE RBRACE
Rule 30    statement_list -> statement_list statement
Rule 31    statement_list -> statement
Rule 32    expression_statement -> expression SEMICOLON
Rule 33    expression_statement -> SEMICOLON
Rule 34    selection_statement -> IF LPAREN expression RPAREN statement
Rule 35    selection_statement -> IF LPAREN expression RPAREN statement ELSE statement
Rule 36    iteration_statement -> WHILE LPAREN expression RPAREN statement
Rule 37    jump_statement -> RETURN expression SEMICOLON
Rule 38    jump_statement -> RETURN SEMICOLON
Rule 39    print_statement -> PRINT LPAREN expression RPAREN SEMICOLON
Rule 40    expression -> assignment_expression
Rule 41    expression -> binary_expression
Rule 42    expression -> unary_expression
Rule 43    expression -> primary_expression
Rule 44    expression -> function_call
Rule 45    assignment_expression -> ID ASSIGN expression
Rule 46    assignment_expression -> ID ADD_ASSIGN expression
Rule 47    assignment_expression -> ID SUB_ASSIGN expression
Rule 48    assignment_expression -> ID MUL_ASSIGN expression
Rule 49    assignment_expression -> ID DIV_ASSIGN expression
Rule 50    binary_expression -> expression PLUS expression
Rule 51    binary_expression -> expression MINUS expression
Rule 52    binary_expression -> expression TIMES expression
Rule 53    binary_expression -> expression DIVIDE expression
Rule 54    binary_expression -> expression MOD expression
Rule 55    binary_expression -> expression POWER expression
Rule 56    binary_expression -> expression EQ expression
Rule 57    binary_expression -> expression NEQ expression
Rule 58    binary_expression -> expression LT expression
Rule 59    binary_expression -> expression GT expression
Rule 60    binary_expression -> expression LE expression
Rule 61    binary_expression -> expression GE expression
Rule 62    binary_expression -> expression AND expression
Rule 63    binary_expression -> expression OR expression
Rule 64    unary_expression -> MINUS expression
Rule 65    unary_expression -> NOT expression
Rule 66    unary_expression -> INCREMENT ID
Rule 67    unary_expression -> DECREMENT ID
Rule 68    primary_expression -> ID
Rule 69    primary_expression -> NUMBER
Rule 70    primary_expression -> STRING
Rule 71    primary_expression -> TRUE
Rule 72    primary_expression -> FALSE
Rule 73    primary_expression -> LPAREN expression RPAREN
Rule 74    function_call -> ID LPAREN argument_list RPAREN
Rule 75    function_call -> ID LPAREN RPAREN
Rule 76    argument_list -> argument_list COMMA expression
Rule 77    argument_list -> expression

Terminals, with rules where they appear

ADD_ASSIGN           : 46
AND                  : 62
ASSIGN               : 9 45
COMMA                : 7 17 76
DECREMENT            : 67
DIVIDE               : 53
DIV_ASSIGN           : 49
ELSE                 : 35
EQ                   : 56
FALSE                : 72
FLOAT                : 12
FOR                  : 
GE                   : 61
GT                   : 59
ID                   : 9 10 15 16 19 45 46 47 48 49 66 67 68 74 75
IF                   : 34 35
INCREMENT            : 66
INT                  : 11
LBRACE               : 28 29
LE                   : 60
LPAREN               : 15 16 34 35 36 39 73 74 75
LT                   : 58
MINUS                : 51 64
MOD                  : 54
MUL_ASSIGN           : 48
NEQ                  : 57
NOT                  : 65
NUMBER               : 69
OR                   : 63
PLUS                 : 50
POWER                : 55
PRINT                : 39
RBRACE               : 28 29
RETURN               : 37 38
RPAREN               : 15 16 34 35 36 39 73 74 75
SEMICOLON            : 6 27 32 33 37 38 39
STRING               : 70
STRING_TYPE          : 13
SUB_ASSIGN           : 47
TIMES                : 52
TRUE                 : 71
VOID                 : 14
WHILE                : 36
error                : 

Nonterminals, with rules where they appear

argument_list        : 74 76
assignment_expression : 40
binary_expression    : 41
compound_statement   : 15 16 20
declaration          : 4
expression           : 9 32 34 35 36 37 39 45 46 47 48 49 50 50 51 51 52 52 53 53 54 54 55 55 56 56 57 57 58 58 59 59 60 60 61 61 62 62 63 63 64 65 73 76 77
expression_statement : 21
external_declaration : 2 3
external_declaration_list : 1 2
function_call        : 44
function_definition  : 5
init_declarator      : 7 8
init_declarator_list : 6 7 27
iteration_statement  : 23
jump_statement       : 24
local_declaration    : 26
parameter_declaration : 17 18
parameter_list       : 15 17
primary_expression   : 43
print_statement      : 25
program              : 0
selection_statement  : 22
statement            : 30 31 34 35 35 36
statement_list       : 28 30
type_specifier       : 6 15 16 19 27
unary_expression     : 42

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . external_declaration_list
    (2) external_declaration_list -> . external_declaration_list external_declaration
    (3) external_declaration_list -> . external_declaration
    (4) external_declaration -> . declaration
    (5) external_declaration -> . function_definition
    (6) declaration -> . type_specifier init_declarator_list SEMICOLON
    (15) function_definition -> . type_specifier ID LPAREN parameter_list RPAREN compound_statement
    (16) function_definition -> . type_specifier ID LPAREN RPAREN compound_statement
    (11) type_specifier -> . INT
    (12) type_specifier -> . FLOAT
    (13) type_specifier -> . STRING_TYPE
    (14) type_specifier -> . VOID

    INT             shift and go to state 7
    FLOAT           shift and go to state 8
    STRING_TYPE     shift and go to state 9
    VOID            shift and go to state 10

    program                        shift and go to state 1
    external_declaration_list      shift and go to state 2
    external_declaration           shift and go to state 3
    declaration                    shift and go to state 4
    function_definition            shift and go to state 5
    type_specifier                 shift and go to state 6

state 1

    (0) S' -> program .



state 2

    (1) program -> external_declaration_list .
    (2) external_declaration_list -> external_declaration_list . external_declaration
    (4) external_declaration -> . declaration
    (5) external_declaration -> . function_definition
    (6) declaration -> . type_specifier init_declarator_list SEMICOLON
    (15) function_definition -> . type_specifier ID LPAREN parameter_list RPAREN compound_statement
    (16) function_definition -> . type_specifier ID LPAREN RPAREN compound_statement
    (11) type_specifier -> . INT
    (12) type_specifier -> . FLOAT
    (13) type_specifier -> . STRING_TYPE
    (14) type_specifier -> . VOID

    $end            reduce using rule 1 (program -> external_declaration_list .)
    INT             shift and go to state 7
    FLOAT           shift and go to state 8
    STRING_TYPE     shift and go to state 9
    VOID            shift and go to state 10

    external_declaration           shift and go to state 11
    declaration                    shift and go to state 4
    function_definition            shift and go to state 5
    type_specifier                 shift and go to state 6

state 3

    (3) external_declaration_list -> external_declaration .

    INT             reduce using rule 3 (external_declaration_list -> external_declaration .)
    FLOAT           reduce using rule 3 (external_declaration_list -> external_declaration .)
    STRING_TYPE     reduce using rule 3 (external_declaration_list -> external_declaration .)
    VOID            reduce using rule 3 (external_declaration_list -> external_declaration .)
    $end            reduce using rule 3 (external_declaration_list -> external_declaration .)


state 4

    (4) external_declaration -> declaration .

    INT             reduce using rule 4 (external_declaration -> declaration .)
    FLOAT           reduce using rule 4 (external_declaration -> declaration .)
    STRING_TYPE     reduce using rule 4 (external_declaration -> declaration .)
    VOID            reduce using rule 4 (external_declaration -> declaration .)
    $end            reduce using rule 4 (external_declaration -> declaration .)


state 5

    (5) external_declaration -> function_definition .

    INT             reduce using rule 5 (external_declaration -> function_definition .)
    FLOAT           reduce using rule 5 (external_declaration -> function_definition .)
    STRING_TYPE     reduce using rule 5 (external_declaration -> function_definition .)
    VOID            reduce using rule 5 (external_declaration -> function_definition .)
    $end            reduce using rule 5 (external_declaration -> function_definition .)


state 6

    (6) declaration -> type_specifier . init_declarator_list SEMICOLON
    (15) function_definition -> type_specifier . ID LPAREN parameter_list RPAREN compound_statement
    (16) function_definition -> type_specifier . ID LPAREN RPAREN compound_statement
    (7) init_declarator_list -> . init_declarator_list COMMA init_declarator
    (8) init_declarator_list -> . init_declarator
    (9) init_declarator -> . ID ASSIGN expression
    (10) init_declarator -> . ID

    ID              shift and go to state 13

    init_declarator_list           shift and go to state 12
    init_declarator                shift and go to state 14

state 7

    (11) type_specifier -> INT .

    ID              reduce using rule 11 (type_specifier -> INT .)


state 8

    (12) type_specifier -> FLOAT .

    ID              reduce using rule 12 (type_specifier -> FLOAT .)


state 9

    (13) type_specifier -> STRING_TYPE .

    ID              reduce using rule 13 (type_specifier -> STRING_TYPE .)


state 10

    (14) type_specifier -> VOID .

    ID              reduce using rule 14 (type_specifier -> VOID .)


state 11

    (2) external_declaration_list -> external_declaration_list external_declaration .

    INT             reduce using rule 2 (external_declaration_list -> external_declaration_list external_declaration .)
    FLOAT           reduce using rule 2 (external_declaration_list -> external_declaration_list external_declaration .)
    STRING_TYPE     reduce using rule 2 (external_declaration_list -> external_declaration_list external_declaration .)
    VOID            reduce using rule 2 (external_declaration_list -> external_declaration_list external_declaration .)
    $end            reduce using rule 2 (external_declaration_list -> external_declaration_list external_declaration .)


state 12

    (6) declaration -> type_specifier init_declarator_list . SEMICOLON
    (7) init_declarator_list -> init_declarator_list . COMMA init_declarator

    SEMICOLON       shift and go to state 15
    COMMA           shift and go to state 16


state 13

    (15) function_definition -> type_specifier ID . LPAREN parameter_list RPAREN compound_statement
    (16) function_definition -> type_specifier ID . LPAREN RPAREN compound_statement
    (9) init_declarator -> ID . ASSIGN expression
    (10) init_declarator -> ID .

    LPAREN          shift and go to state 17
    ASSIGN          shift and go to state 18
    SEMICOLON       reduce using rule 10 (init_declarator -> ID .)
    COMMA           reduce using rule 10 (init_declarator -> ID .)


state 14

    (8) init_declarator_list -> init_declarator .

    SEMICOLON       reduce using rule 8 (init_declarator_list -> init_declarator .)
    COMMA           reduce using rule 8 (init_declarator_list -> init_declarator .)


state 15

    (6) declaration -> type_specifier init_declarator_list SEMICOLON .

    INT             reduce using rule 6 (declaration -> type_specifier init_declarator_list SEMICOLON .)
    FLOAT           reduce using rule 6 (declaration -> type_specifier init_declarator_list SEMICOLON .)
    STRING_TYPE     reduce using rule 6 (declaration -> type_specifier init_declarator_list SEMICOLON .)
    VOID            reduce using rule 6 (declaration -> type_specifier init_declarator_list SEMICOLON .)
    $end            reduce using rule 6 (declaration -> type_specifier init_declarator_list SEMICOLON .)


state 16

    (7) init_declarator_list -> init_declarator_list COMMA . init_declarator
    (9) init_declarator -> . ID ASSIGN expression
    (10) init_declarator -> . ID

    ID              shift and go to state 20

    init_declarator                shift and go to state 19

state 17

    (15) function_definition -> type_specifier ID LPAREN . parameter_list RPAREN compound_statement
    (16) function_definition -> type_specifier ID LPAREN . RPAREN compound_statement
    (17) parameter_list -> . parameter_list COMMA parameter_declaration
    (18) parameter_list -> . parameter_declaration
    (19) parameter_declaration -> . type_specifier ID
    (11) type_specifier -> . INT
    (12) type_specifier -> . FLOAT
    (13) type_specifier -> . STRING_TYPE
    (14) type_specifier -> . VOID

    RPAREN          shift and go to state 23
    INT             shift and go to state 7
    FLOAT           shift and go to state 8
    STRING_TYPE     shift and go to state 9
    VOID            shift and go to state 10

    type_specifier                 shift and go to state 21
    parameter_list                 shift and go to state 22
    parameter_declaration          shift and go to state 24

state 18

    (9) init_declarator -> ID ASSIGN . expression
    (40) expression -> . assignment_expression
    (41) expression -> . binary_expression
    (42) expression -> . unary_expression
    (43) expression -> . primary_expression
    (44) expression -> . function_call
    (45) assignment_expression -> . ID ASSIGN expression
    (46) assignment_expression -> . ID ADD_ASSIGN expression
    (47) assignment_expression -> . ID SUB_ASSIGN expression
    (48) assignment_expression -> . ID MUL_ASSIGN expression
    (49) assignment_expression -> . ID DIV_ASSIGN expression
    (50) binary_expression -> . expression PLUS expression
    (51) binary_expression -> . expression MINUS expression
    (52) binary_expression -> . expression TIMES expression
    (53) binary_expression -> . expression DIVIDE expression
    (54) binary_expression -> . expression MOD expression
    (55) binary_expression -> . expression POWER expression
    (56) binary_expression -> . expression EQ expression
    (57) binary_expression -> . expression NEQ expression
    (58) binary_expression -> . expression LT expression
    (59) binary_expression -> . expression GT expression
    (60) binary_expression -> . expression LE expression
    (61) binary_expression -> . expression GE expression
    (62) binary_expression -> . expression AND expression
    (63) binary_expression -> . expression OR expression
    (64) unary_expression -> . MINUS expression
    (65) unary_expression -> . NOT expression
    (66) unary_expression -> . INCREMENT ID
    (67) unary_expression -> . DECREMENT ID
    (68) primary_expression -> . ID
    (69) primary_expression -> . NUMBER
    (70) primary_expression -> . STRING
    (71) primary_expression -> . TRUE
    (72) primary_expression -> . FALSE
    (73) primary_expression -> . LPAREN expression RPAREN
    (74) function_call -> . ID LPAREN argument_list RPAREN
    (75) function_call -> . ID LPAREN RPAREN

    ID              shift and go to state 25
    MINUS           shift and go to state 32
    NOT             shift and go to state 33
    INCREMENT       shift and go to state 34
    DECREMENT       shift and go to state 35
    NUMBER          shift and go to state 36
    STRING          shift and go to state 37
    TRUE            shift and go to state 38
    FALSE           shift and go to state 39
    LPAREN          shift and go to state 40

    expression                     shift and go to state 26
    assignment_expression          shift and go to state 27
    binary_expression              shift and go to state 28
    unary_expression               shift and go to state 29
    primary_expression             shift and go to state 30
    function_call                  shift and go to state 31

state 19

    (7) init_declarator_list -> init_declarator_list COMMA init_declarator .

    SEMICOLON       reduce using rule 7 (init_declarator_list -> init_declarator_list COMMA init_declarator .)
    COMMA           reduce using rule 7 (init_declarator_list -> init_declarator_list COMMA init_declarator .)


state 20

    (9) init_declarator -> ID . ASSIGN expression
    (10) init_declarator -> ID .

    ASSIGN          shift and go to state 18
    SEMICOLON       reduce using rule 10 (init_declarator -> ID .)
    COMMA           reduce using rule 10 (init_declarator -> ID .)


state 21

    (19) parameter_declaration -> type_specifier . ID

    ID              shift and go to state 41


state 22

    (15) function_definition -> type_specifier ID LPAREN parameter_list . RPAREN compound_statement
    (17) parameter_list -> parameter_list . COMMA parameter_declaration

    RPAREN          shift and go to state 42
    COMMA           shift and go to state 43


state 23

    (16) function_definition -> type_specifier ID LPAREN RPAREN . compound_statement
    (28) compound_statement -> . LBRACE statement_list RBRACE
    (29) compound_statement -> . LBRACE RBRACE

    LBRACE          shift and go to state 45

    compound_statement             shift and go to state 44

state 24

    (18) parameter_list -> parameter_declaration .

    RPAREN          reduce using rule 18 (parameter_list -> parameter_declaration .)
    COMMA           reduce using rule 18 (parameter_list -> parameter_declaration .)


state 25

    (45) assignment_expression -> ID . ASSIGN expression
    (46) assignment_expression -> ID . ADD_ASSIGN expression
    (47) assignment_expression -> ID . SUB_ASSIGN expression
    (48) assignment_expression -> ID . MUL_ASSIGN expression
    (49) assignment_expression -> ID . DIV_ASSIGN expression
    (68) primary_expression -> ID .
    (74) function_call -> ID . LPAREN argument_list RPAREN
    (75) function_call -> ID . LPAREN RPAREN

    ASSIGN          shift and go to state 46
    ADD_ASSIGN      shift and go to state 47
    SUB_ASSIGN      shift and go to state 48
    MUL_ASSIGN      shift and go to state 49
    DIV_ASSIGN      shift and go to state 50
    PLUS            reduce using rule 68 (primary_expression -> ID .)
    MINUS           reduce using rule 68 (primary_expression -> ID .)
    TIMES           reduce using rule 68 (primary_expression -> ID .)
    DIVIDE          reduce using rule 68 (primary_expression -> ID .)
    MOD             reduce using rule 68 (primary_expression -> ID .)
    POWER           reduce using rule 68 (primary_expression -> ID .)
    EQ              reduce using rule 68 (primary_expression -> ID .)
    NEQ             reduce using rule 68 (primary_expression -> ID .)
    LT              reduce using rule 68 (primary_expression -> ID .)
    GT              reduce using rule 68 (primary_expression -> ID .)
    LE              reduce using rule 68 (primary_expression -> ID .)
    GE              reduce using rule 68 (primary_expression -> ID .)
    AND             reduce using rule 68 (primary_expression -> ID .)
    OR              reduce using rule 68 (primary_expression -> ID .)
    SEMICOLON       reduce using rule 68 (primary_expression -> ID .)
    COMMA           reduce using rule 68 (primary_expression -> ID .)
    RPAREN          reduce using rule 68 (primary_expression -> ID .)
    LPAREN          shift and go to state 51


state 26

    (9) init_declarator -> ID ASSIGN expression .
    (50) binary_expression -> expression . PLUS expression
    (51) binary_expression -> expression . MINUS expression
    (52) binary_expression -> expression . TIMES expression
    (53) binary_expression -> expression . DIVIDE expression
    (54) binary_expression -> expression . MOD expression
    (55) binary_expression -> expression . POWER expression
    (56) binary_expression -> expression . EQ expression
    (57) binary_expression -> expression . NEQ expression
    (58) binary_expression -> expression . LT expression
    (59) binary_expression -> expression . GT expression
    (60) binary_expression -> expression . LE expression
    (61) binary_expression -> expression . GE expression
    (62) binary_expression -> expression . AND expression
    (63) binary_expression -> expression . OR expression

    SEMICOLON       reduce using rule 9 (init_declarator -> ID ASSIGN expression .)
    COMMA           reduce using rule 9 (init_declarator -> ID ASSIGN expression .)
    PLUS            shift and go to state 52
    MINUS           shift and go to state 53
    TIMES           shift and go to state 54
    DIVIDE          shift and go to state 55
    MOD             shift and go to state 56
    POWER           shift and go to state 57
    EQ              shift and go to state 58
    NEQ             shift and go to state 59
    LT              shift and go to state 60
    GT              shift and go to state 61
    LE              shift and go to state 62
    GE              shift and go to state 63
    AND             shift and go to state 64
    OR              shift and go to state 65


state 27

    (40) expression -> assignment_expression .

    PLUS            reduce using rule 40 (expression -> assignment_expression .)
    MINUS           reduce using rule 40 (expression -> assignment_expression .)
    TIMES           reduce using rule 40 (expression -> assignment_expression .)
    DIVIDE          reduce using rule 40 (expression -> assignment_expression .)
    MOD             reduce using rule 40 (expression -> assignment_expression .)
    POWER           reduce using rule 40 (expression -> assignment_expression .)
    EQ              reduce using rule 40 (expression -> assignment_expression .)
    NEQ             reduce using rule 40 (expression -> assignment_expression .)
    LT              reduce using rule 40 (expression -> assignment_expression .)
    GT              reduce using rule 40 (expression -> assignment_expression .)
    LE              reduce using rule 40 (expression -> assignment_expression .)
    GE              reduce using rule 40 (expression -> assignment_expression .)
    AND             reduce using rule 40 (expression -> assignment_expression .)
    OR              reduce using rule 40 (expression -> assignment_expression .)
    SEMICOLON       reduce using rule 40 (expression -> assignment_expression .)
    COMMA           reduce using rule 40 (expression -> assignment_expression .)
    RPAREN          reduce using rule 40 (expression -> assignment_expression .)


state 28

    (41) expression -> binary_expression .

    PLUS            reduce using rule 41 (expression -> binary_expression .)
    MINUS           reduce using rule 41 (expression -> binary_expression .)
    TIMES           reduce using rule 41 (expression -> binary_expression .)
    DIVIDE          reduce using rule 41 (expression -> binary_expression .)
    MOD             reduce using rule 41 (expression -> binary_expression .)
    POWER           reduce using rule 41 (expression -> binary_expression .)
    EQ              reduce using rule 41 (expression -> binary_expression .)
    NEQ             reduce using rule 41 (expression -> binary_expression .)
    LT              reduce using rule 41 (expression -> binary_expression .)
    GT              reduce using rule 41 (expression -> binary_expression .)
    LE              reduce using rule 41 (expression -> binary_expression .)
    GE              reduce using rule 41 (expression -> binary_expression .)
    AND             reduce using rule 41 (expression -> binary_expression .)
    OR              reduce using rule 41 (expression -> binary_expression .)
    SEMICOLON       reduce using rule 41 (expression -> binary_expression .)
    COMMA           reduce using rule 41 (expression -> binary_expression .)
    RPAREN          reduce using rule 41 (expression -> binary_expression .)


state 29

    (42) expression -> unary_expression .

    PLUS            reduce using rule 42 (expression -> unary_expression .)
    MINUS           reduce using rule 42 (expression -> unary_expression .)
    TIMES           reduce using rule 42 (expression -> unary_expression .)
    DIVIDE          reduce using rule 42 (expression -> unary_expression .)
    MOD             reduce using rule 42 (expression -> unary_expression .)
    POWER           reduce using rule 42 (expression -> unary_expression .)
    EQ              reduce using rule 42 (expression -> unary_expression .)
    NEQ             reduce using rule 42 (expression -> unary_expression .)
    LT              reduce using rule 42 (expression -> unary_expression .)
    GT              reduce using rule 42 (expression -> unary_expression .)
    LE              reduce using rule 42 (expression -> unary_expression .)
    GE              reduce using rule 42 (expression -> unary_expression .)
    AND             reduce using rule 42 (expression -> unary_expression .)
    OR              reduce using rule 42 (expression -> unary_expression .)
    SEMICOLON       reduce using rule 42 (expression -> unary_expression .)
    COMMA           reduce using rule 42 (expression -> unary_expression .)
    RPAREN          reduce using rule 42 (expression -> unary_expression .)


state 30

    (43) expression -> primary_expression .

    PLUS            reduce using rule 43 (expression -> primary_expression .)
    MINUS           reduce using rule 43 (expression -> primary_expression .)
    TIMES           reduce using rule 43 (expression -> primary_expression .)
    DIVIDE          reduce using rule 43 (expression -> primary_expression .)
    MOD             reduce using rule 43 (expression -> primary_expression .)
    POWER           reduce using rule 43 (expression -> primary_expression .)
    EQ              reduce using rule 43 (expression -> primary_expression .)
    NEQ             reduce using rule 43 (expression -> primary_expression .)
    LT              reduce using rule 43 (expression -> primary_expression .)
    GT              reduce using rule 43 (expression -> primary_expression .)
    LE              reduce using rule 43 (expression -> primary_expression .)
    GE              reduce using rule 43 (expression -> primary_expression .)
    AND             reduce using rule 43 (expression -> primary_expression .)
    OR              reduce using rule 43 (expression -> primary_expression .)
    SEMICOLON       reduce using rule 43 (expression -> primary_expression .)
    COMMA           reduce using rule 43 (expression -> primary_expression .)
    RPAREN          reduce using rule 43 (expression -> primary_expression .)


state 31

    (44) expression -> function_call .

    PLUS            reduce using rule 44 (expression -> function_call .)
    MINUS           reduce using rule 44 (expression -> function_call .)
    TIMES           reduce using rule 44 (expression -> function_call .)
    DIVIDE          reduce using rule 44 (expression -> function_call .)
    MOD             reduce using rule 44 (expression -> function_call .)
    POWER           reduce using rule 44 (expression -> function_call .)
    EQ              reduce using rule 44 (expression -> function_call .)
    NEQ             reduce using rule 44 (expression -> function_call .)
    LT              reduce using rule 44 (expression -> function_call .)
    GT              reduce using rule 44 (expression -> function_call .)
    LE              reduce using rule 44 (expression -> function_call .)
    GE              reduce using rule 44 (expression -> function_call .)
    AND             reduce using rule 44 (expression -> function_call .)
    OR              reduce using rule 44 (expression -> function_call .)
    SEMICOLON       reduce using rule 44 (expression -> function_call .)
    COMMA           reduce using rule 44 (expression -> function_call .)
    RPAREN          reduce using rule 44 (expression -> function_call .)


state 32
